# python-citest

./: README.md  pyproject.toml  test.file
.github/workflows/: build-linux.yml  build.yml  push.yml  test.yml
jsonip/: __main__.py  cli.py  version.py
tests/: test_jsonip.py
