[tool.poetry]
name = "jsonip"
version = "0.2.0"
description = "JUST A TEST PACKAGE FOR PRACTISING get ip from jsonip.com"
authors = ["dev-techmoe <me@lolicookie.com>"]
license = "MIT"

[tool.poetry.scripts]
getjsonip = "jsonip.cli:run"


[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.0.2"
pytest-asyncio = "^0.14.0"
pyinstaller = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

